Upload image file to website

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,10 +1,4 @@
-body
+/* body
 {
-    background-image: url('../img/img1.jpg');
-}
-
-.header{
-   /* background-color: black;*/
-    text-emphasis: none;
-    padding: 5px;
-}
+    background-image: url('../img/img1.jpg'); 
+} */
